--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,50 @@
+# Sensitive information #
+#########################
 # Ignore configuration files that may contain sensitive information.
-sites/*/settings*.php
+sites/*/settings*
+sites/*/drushrc.php
 
-# Ignore paths that contain user-generated content.
+# User Generated Content #
+##########################
+files
 sites/*/files
 sites/*/private
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# It's better to unpack these files and commit the raw source, git has its own
+# built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store*
+ehthumbs.db
+Thumbs.db
+
+# Caches #
+##########
+.sass-cache
+config.codekit
